--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     command: --default-authentication-plugin=mysql_native_password --init-file /data/application/init.sql
     restart: always
     volumes:
-        - ./db/init.sql:/data/application/init.sql
+        - ./init.sql:/data/application/init.sql
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_DATABASE: ${MYSQL_DATABASE}
